scss/_patterns_matrix.scss
@import 'settings';

// List Grid
@mixin vf-p-matrix {
  .p-matrix {
    $matrix-img-width: map-get($icon-sizes, thumb--small);
    $matrix-img-gutter: $sph-inter;

    display: flex;
    flex-wrap: wrap;
    list-style: none;
    margin-bottom: $spv-inter--scaleable;
    margin-left: 0;
    padding-left: 0;

    &__item {
      border-top: 1px solid $color-mid-light;
      display: flex;
      flex: 1 1 auto;
      padding-bottom: $spv-intra--scaleable;
      padding-top: $spv-intra--scaleable - $px;

      @media (min-width: $breakpoint-small) {
        display: flex;
        flex-wrap: wrap;
        width: 33.333%;
      }

      @media (min-width: $breakpoint-small) and (max-width: $breakpoint-large) {
        flex-direction: column;
      }

      @media (min-width: $breakpoint-medium) {
        border-right: 1px solid $color-mid-light;
        padding-left: $spv-intra--scaleable;
        padding-right: $spv-intra--scaleable;
        width: 33.333%;

        &:empty {
          display: block; // hide orphans
        }

        &:nth-child(3n+1) {
          padding-left: 0;
        }

        &:nth-child(3n+3) {
          border-right: 0;
        }

        &:nth-child(1),
        &:nth-child(2),
        &:nth-child(3) {
          border-top: 0;
        }
      }

      @media (min-width: $breakpoint-large) { // 3 items per row
        border-right: 1px solid $color-mid-light;
        padding: $spv-intra--scaleable;
        width: 33.333%;

        &:empty {
          display: block; // hide orphans
        }

        &:nth-child(3n+1) {
          padding-left: 0;
        }

        &:nth-child(3n+3) {
          border-right: 0;
          padding-right: 0;
        }

        &:nth-last-child(1),
        &:nth-last-child(2),
        &:nth-last-child(3) {
          border-bottom: 0;
        }
      }

      &::before {
        content: '';
        display: block;
        flex: 0 0 auto;
        height: $matrix-img-width;
        margin-bottom: $spv-intra--scaleable;
        margin-right: $matrix-img-gutter;
        position: relative;
        width: $matrix-img-width;
      }
    }

    &__img,
    &__content {
      align-self: flex-start;
    }

    &__img {
      // maintain image aspect ratio, but ensure it doesn't overflow in either direction
      height: auto;
      max-height: $matrix-img-width;
      max-width: $matrix-img-width;
      position: absolute;
      width: auto;
    }

    &__content {
      display: flex;
      flex: 1 1 auto;
      flex-direction: column;
      padding-right: $sph-intra;

      @media (min-width: $breakpoint-large) {
        width: calc(100% - #{$matrix-img-width + $matrix-img-gutter});
      }
    }

    &__title {
      @extend %vf-heading-4;
      margin-top: -$sp-unit;
    }

    &__desc {
      margin-bottom: $spv-nudge-compensation;
      margin-top: - $sp-unit * 2;
    }
  }
}

